user registeration working well with bull

--- a/email-templates/emailVerification.ejs
+++ b/email-templates/emailVerification.ejs
@@ -318,7 +318,7 @@
                                             color: rgb(10 102 194);
                                           "
                                         >
-                                          LMS
+                                          Chatter
                                         </h1>
                                       </td>
                                     </tr>
@@ -413,43 +413,9 @@
                                             font-family: inherit;
                                           "
                                         >
-                                          Activation Code <%=
-                                          activationTokenCode %>
-                                        </span>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td
-                                        height="100%"
-                                        valign="top"
-                                        role="module-content"
-                                      >
-                                        <span
-                                          class="subheading"
-                                          style="
-                                            color: #808080;
-                                            font-size: 20px;
-                                            line-height: 26px;
-                                            display: block;
-                                            font-style: normal;
-                                            font-variant-ligatures: normal;
-                                            font-variant-caps: normal;
-                                            font-weight: 400;
-                                            letter-spacing: normal;
-                                            orphans: 2;
-                                            text-indent: 0;
-                                            text-transform: none;
-                                            widows: 2;
-                                            word-spacing: 0;
-                                            -webkit-text-stroke-width: 0;
-                                            text-decoration-thickness: initial;
-                                            text-decoration-style: initial;
-                                            text-decoration-color: initial;
-                                            font-family: inherit;
-                                          "
-                                        >
                                           Dear <%= name %>, Please verify your
-                                          email address by above Activation Code
+                                          email address by clicking the link
+                                          below.
                                         </span>
                                       </td>
                                     </tr>
@@ -493,7 +459,38 @@
                                                   text-align: left;
                                                   background-color: inherit;
                                                 "
-                                              ></td>
+                                              >
+                                                <a
+                                                  href="<%= url %>"
+                                                  style="
+                                                    background-color: #090909;
+                                                    border: 1px solid #333;
+                                                    border-radius: 12px;
+                                                    color: #fff;
+                                                    display: inline-block;
+                                                    font-size: 15px;
+                                                    font-family: inherit;
+                                                    font-weight: 700;
+                                                    letter-spacing: 0;
+                                                    line-height: normal;
+                                                    padding: 11px;
+                                                    box-sizing: border-box;
+                                                    text-align: center;
+                                                    text-decoration: none;
+                                                    width: 218px;
+                                                    font-family:
+                                                      system-ui,
+                                                      -apple-system,
+                                                      BlinkMacSystemFont,
+                                                      Roboto,
+                                                      Helvetica,
+                                                      Arial,
+                                                      sans-serif;
+                                                  "
+                                                  target="_blank"
+                                                  >Confirm my account</a
+                                                >
+                                              </td>
                                             </tr>
                                           </tbody>
                                         </table>
@@ -582,8 +579,8 @@
                                           "
                                         >
                                           <p>
-                                            If you haven't register in LMS then
-                                            kindly ignore
+                                            If you haven't register in Chatter
+                                            then kindly ignore
                                           </p>
                                         </div>
                                         <div
@@ -594,7 +591,7 @@
                                             margin: 20px;
                                           "
                                         >
-                                          <p>Navigate within next 10 minute</p>
+                                          <p>Navigate within next 5 minute</p>
                                         </div>
                                       </td>
                                     </tr>
